<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wtf.joni.dannouncer.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/webhook_url"
        android:hint="@string/webhook_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"/>

    <Button
        android:id="@+id/list_webhooks"
        android:text="@string/saved_webhooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"/>

    <Button
        android:id="@+id/send"
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/content"
                android:hint="@string/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/user"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedLinkUrl"
                android:hint="@string/embed_link_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedLinkText"
                android:hint="@string/embed_link_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedDescription"
                android:hint="@string/embed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedFieldName1"
                android:hint="@string/field_name_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedFieldText1"
                android:hint="@string/field_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedFieldName2"
                android:hint="@string/field_name_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedFieldText2"
                android:hint="@string/field_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedFieldName3"
                android:hint="@string/field_name_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/embedFieldText3"
                android:hint="@string/field_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
