<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wtf.joni.dannouncer.NewWebhookActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/webhook_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_name"/>

    <EditText
        android:id="@+id/webhook_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_url"
        android:inputType="textUri"/>

    <Button
        android:id="@+id/add_webhook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_webhook"
        android:onClick="clicked"/>

</LinearLayout>
